ogc-api-features items endpoint
